Disable scheduled cron job in pythonapp.yml
Comment out the scheduled cron job in the workflow.

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -3,9 +3,9 @@ name: Python application
 on:
   push:
     branches: [ master ]
-  schedule:
+  # schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/15 * * * *'
+    # - cron:  '*/15 * * * *'
 
 jobs:
   build:
